--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <li class="info"><a href="">+11 (000) 111-11-11</a></li>
             </section>
         </div>
+    </header>
+    <main>
         <div class="front">
             <h1>Effective Solutions <br />for your Business</h1>
             <button type="button"><a href="#" class="butones">Order Service</a></button>
         </div>
-    </header>
-    <main>
         <section>
         <ul class="container">
             <div>
@@ -50,13 +50,13 @@
         <section>
         <h2>What are we doing</h2>
         <ul class="container">
-            <li>
+            <li class="doing">
                 <img src="images/img 1.jpg" alt="Computer Monitor" width="400px"/>
             </li>
-            <li>
+            <li class="doing">
                 <img src="images/img 2.jpg" alt="Iphone Screen" width="400px"/>
             </li>
-            <li>
+            <li class="doing">
                 <img src="images/img 3.jpg" alt="Cellphone with laptop" width="400px"/>
             </li>
         </ul>
@@ -66,8 +66,10 @@
         <ul class="container">
             <li class="card">
                 <img src="images/Team Card 1.jpg" alt="Mark Guerrero" width="300px" />
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <div>
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </div>
             </li>
             <li class="card">
                 <img src="images/Team Card 2.jpg" alt="Tom Ford" width="300px" />
