--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header>
         <div class="top">
             <a href="" class="web"><span class="web_span">WEB</span><span class="studio-header">STUDIO</span></a>
-            <nav class="navigation">
-                <li class="navi"><a href="#">Studio</a></li> 
-                <li class="navi"><a href="portfolio.html">Portfolio</a></li>
-                <li class="navi"><a href="">Contacts</a></li>
-            </nav>
+                <nav class="navigation">
+                    <li class="navi"><a class="navigate" href="#">Studio</a></li> 
+                    <li class="navi"><a class="navigate" href="portfolio.html">Portfolio</a></li>
+                    <li class="navi"><a class="navigate" href="">Contacts</a></li>
+                </nav>
             <section class="information">
-                <li class="info"><a href="">info@devstudio.com</a></li>
-                <li class="info"><a href="">+11 (000) 111-11-11</a></li>
+                <li class="info"><a class="navigate" href="">info@devstudio.com</a></li>
+                <li class="info"><a class="navigate" href="">+11 (000) 111-11-11</a></li>
             </section>
         </div>
     </header>
@@ -27,8 +27,8 @@
             <h1>Effective Solutions <br />for your Business</h1>
             <button type="button"><a href="#" class="butones">Order Service</a></button>
         </div>
-        <section>
-        <ul class="container">
+        <section class="container">
+        <ul class="container1">
             <div>
                 <li><h3>Strategy</h3></li>
                 <p>Our goal is to identify the business problem to walk away with the perfect and creative solutions.</p>
@@ -47,9 +47,9 @@
             </div>
         </ul>
         </section>
-        <section>
+        <section class="container">
         <h2>What are we doing</h2>
-        <ul class="container">
+        <ul class="container1">
             <li class="doing">
                 <img src="images/img 1.jpg" alt="Computer Monitor" width="400px"/>
             </li>
@@ -61,32 +61,40 @@
             </li>
         </ul>
         </section>
-        <section>
+        <section class="container">
+        <div class="team">
         <h2>Our Team</h2>
-        <ul class="container">
-            <li class="card">
-                <img src="images/Team Card 1.jpg" alt="Mark Guerrero" width="300px" />
-                <div>
+        <ul class="container1">
+            <li>
+                <img src="images/Team Card 1.jpg" alt="Mark Guerrero" width="298px" />
+                <div class="card">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </div>
             </li>
-            <li class="card">
+            <li>
                 <img src="images/Team Card 2.jpg" alt="Tom Ford" width="300px" />
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <div class="card">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </div>
             </li>
-            <li class="card">
+            <li>
                 <img src="images/Team Card 3.jpg" alt="Camila Garcia" width="300px" />
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <div class="card">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </div>
             </li>
-            <li class="card">
+            <li>
                 <img src="images/Team Card 4.jpg" alt="Daniel Wilson" width="300px"/>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <div class="card">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </div>
             </li>
         </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
