--- a/index.html
+++ b/index.html
@@ -65,32 +65,32 @@
         <div class="team">
         <h2>Our Team</h2>
         <ul class="container1">
-            <li>
-                <img src="images/Team Card 1.jpg" alt="Mark Guerrero" width="298px" />
+            <li class="personnel">
+                <img src="images/Team Card 1.png" alt="Mark Guerrero" width="298px" />
                 <div class="card">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="tag">Mark Guerrero</h3>
+                    <p class="tag">Product Designer</p>
                 </div>
             </li>
-            <li>
-                <img src="images/Team Card 2.jpg" alt="Tom Ford" width="300px" />
+            <li class="personnel">
+                <img src="images/Team Card 2.png" alt="Tom Ford" width="300px" />
                 <div class="card">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="tag">Tom Ford</h3>
+                    <p class="tag">Frontend Developer</p>
                 </div>
             </li>
-            <li>
-                <img src="images/Team Card 3.jpg" alt="Camila Garcia" width="300px" />
+            <li class="personnel">
+                <img src="images/Team Card 3.png" alt="Camila Garcia" width="300px" />
                 <div class="card">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="tag">Camila Garcia</h3>
+                    <p class="tag">Marketing</p>
                 </div>
             </li>
-            <li>
-                <img src="images/Team Card 4.jpg" alt="Daniel Wilson" width="300px"/>
+            <li class="personnel">
+                <img src="images/Team Card 4.png" alt="Daniel Wilson" width="300px"/>
                 <div class="card">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="tag">Daniel Wilson</h3>
+                    <p class="tag">UI Designer</p>
                 </div>
             </li>
         </ul>
