--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
     </header>
     <main>
-        <div class="front">
+        <section class="front">
             <h1>Effective Solutions <br />for your Business</h1>
             <button type="button"><a href="#" class="butones">Order Service</a></button>
-        </div>
+        </section>
         <section class="container">
         <ul class="container1">
             <div>
